--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<div class="jumbotron">
+<div class="jumbotron" style="
+    margin: auto;
+    width: 25%;
+">
   <h1 class="display-4">1987年</h1>
   <p class="lead"><ruby>端<rp>（</rp><rt>duān</rt><rp>）</rp>
 </ruby>典创造了我的世界</p>
-  <hr class="my-4">
-  <video width="320" height="240" controls>
-  <source src="/resources/full.mp4" type="video/mp4">
+  <video width="250" height="150" controls>
+  <source src="https://cdn.glitch.com/b0acfa4c-7e37-4a82-aefa-c9e1a4747c87%2Ffull.mp4?v=1568198821463" type="video/mp4">
 宁的浏览器太垃圾辣
-  </video>
-</div>
+  </video><br>
+  这我做的 -- Enterman
+  </div>
+</html>
