--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 宁的浏览器太垃圾辣
   </video><br>
   这我做的 -- Enterman
-  <button href="https://github.com/shadowsocksrr/shadowsocksr-csharp/releases/download/4.9.2/ShadowsocksR-win-4.9.2.zip"></button>
+  <button href="https://github.com/shadowsocksrr/shadowsocksr-csharp/releases/download/4.9.2/ShadowsocksR-win-4.9.2.zip">a</button>
   </div>
 </html>
