--- a/load.html
+++ b/load.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" type="text/css" href="bar.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <body>
+<div>
 <div class="chart">
                     <div class="bar bar-75 white">
                         <div class="face top">
@@ -18,5 +19,5 @@
               <div class="growing-bar"></div>
              </div>
       </div>
-</div>
+</div></div>
 </body>
