--- a/load.html
+++ b/load.html
@@ -19,5 +19,6 @@
               <div class="growing-bar"></div>
              </div>
       </div>
-</div></div>
+</div>
+  <input type="range"></input></div>
 </body>
