--- a/load.html
+++ b/load.html
@@ -1,9 +1,14 @@
 <link rel="stylesheet" type="text/css" href="bar.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script>
+  function a(i){
+  document.getElementById("bar1").class = "bar bar-" + i + " cyan";
+}
+</script>
 <body>
 <div>
 <div class="chart">
-                    <div class="bar bar-0 white">
+                    <div class="bar bar-0 cyan" id="bar1">
                         <div class="face top">
                             <div class="growing-bar"></div>
                         </div>
@@ -20,5 +25,5 @@
              </div>
       </div>
 </div>
-  <input type="range"></input></div>
+  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)"></input></div>
 </body>
