--- a/load.html
+++ b/load.html
@@ -6,7 +6,7 @@
 }
 </script>
 <body>
-<div>
+<div style="margin:100;">
 <div class="chart">
                     <div class="bar bar-0 cyan" id="bar1">
                         <div class="face top">
