--- a/load.html
+++ b/load.html
@@ -25,5 +25,6 @@
              </div>
       </div>
 </div>
-  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)"></input></div>
+  <div>
+  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)" style="margin:auto; display: block;"></input></div></div>
 </body>
