--- a/load.html
+++ b/load.html
@@ -26,5 +26,5 @@
       </div>
 </div>
   <div>
-  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)" style="margin:auto; display: block;"></input></div></div>
+  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)" style="margin:auto;display: block;width: 75%;"></input></div></div>
 </body>
