--- a/load.html
+++ b/load.html
@@ -1,14 +1,19 @@
 <link rel="stylesheet" type="text/css" href="bar.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script>
-  function a(i){
-  document.getElementById("bar1").className = "bar bar-" + i + " cyan";
-}
+  function a(){
+    let klass = document.getElementbyId("bar1").className;
+    let indeks = klass.indexOf("-")+1;
+    let numberr = parseInt(klass.slice(indeks)) + 1;
+    let splitt = klass.split("-");
+    splitt[1] = numberr.toString();
+    document.getElementbyId("bar1").className = splitt.join("-");
+  }
 </script>
 <body>
 <div style="margin:100;">
 <div class="chart">
-                    <div class="bar bar-0 cyan" id="bar1">
+                    <div class="cyan bar bar-0" id="bar1">
                         <div class="face top">
                             <div class="growing-bar"></div>
                         </div>
@@ -26,5 +31,5 @@
       </div>
 </div>
   <div>
-  <input type="range" value="0" min="0" max="100" step="1" oninput="a(this.value)" onchange="a(this.value)" style="margin:auto;display: block;width: 75%;"></input></div></div>
+  <input class="btn btn-primary" role="button" onclick="a()"><input>/div></div>
 </body>
