--- a/load.html
+++ b/load.html
@@ -7,7 +7,7 @@
     let numberr = parseInt(klass.slice(indeks)) + 1;
     let splitt = klass.split("-");
     splitt[1] = numberr.toString();
-    document.getElementbyId("bar1").className = splitt.join("-");
+    document.getElementById("bar1").className = splitt.join("-");
   }
 </script>
 <body>
