--- a/load.html
+++ b/load.html
@@ -31,5 +31,5 @@
       </div>
 </div>
   <div>
-  <input class="btn btn-primary" type="button" onclick="a()">Energy</input></div></div>
+  <input class="btn btn-primary" type="button" onclick="a()" value="Energy"></input></div></div>
 </body>
