--- a/load.html
+++ b/load.html
@@ -17,7 +17,7 @@
   return "";
 }
   document.onload()=function(){
-    document.getElementById("butn").value=parse(getCookie("point"))
+    document.getElementById("butn").value=parseInt(getCookie("point"))
   }
   function a(){
     let klass = document.getElementById("bar1").className;
