--- a/load.html
+++ b/load.html
@@ -16,7 +16,7 @@
   }
   return "";
 }
-  window.onload=function a(){
+  window.onload=function b(){
     document.getElementById("butn").value=parseInt(getCookie("point"))
   }
   function a(){
