--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <style>.smm{ 
 font-family: 'Super Mario Maker Extended', serif;
-  src: url('smmfont.ttf') format('truetype');
+  src: url('1987n.github.io/smmfont.ttf') format('truetype');
 }</style>
   </head>
 <div class="jumbotron" style="
