--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <style>
-    @font-face{ 
-      font-family: smm, sans-serif;
-      src: url('1987n.github.io/smmfont.ttf') format('truetype');
-    }
+   @font-face{ 
+   font-family: smm;
+   src: url(./smmfont.ttf);
+   }
+    .smm{font-family: smm;}
   </style>
   </head>
 <div class="jumbotron" style="
     margin: auto;
     width: 25%;
 ">
-  <h1 class="display-4">1987年</h1>
-  <p class="lead"><ruby>端<rp>（</rp><rt>duān</rt><rp>）</rp>
+  <h1 class="display-4 smm">1987年</h1>
+  <p class="lead smm"><ruby>端<rp>（</rp><rt>duān</rt><rp>）</rp>
 </ruby>典创造了我的世界</p>
   <video width="250" height="150" controls>
   <source src="https://cdn.glitch.com/b0acfa4c-7e37-4a82-aefa-c9e1a4747c87%2Ffull.mp4?v=1568198821463" type="video/mp4">
