--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     width: 25%;
 ">
   <h1 class="display-4 smm">1987年</h1>
-  <p class="lead smm"><ruby>端<rp>（</rp><rt>duān</rt><rp>）</rp>
+  <p class="lead smm"><ruby>端<rp>（</rp><rt>duän</rt><rp>）</rp>
 </ruby>典创造了我的世界</p>
   <video width="250" height="150" controls>
   <source src="https://cdn.glitch.com/b0acfa4c-7e37-4a82-aefa-c9e1a4747c87%2Ffull.mp4?v=1568198821463" type="video/mp4">
