--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
    font-family: smm;
    src: url(./smmfont.ttf);
    }
+    @font-face{ 
+   font-family: cn;
+   src: url(./cnfont.ttf);
+   }
     .smm{font-family: smm;}
+    .cn{font-family: cn;}
   </style>
   </head>
 <div class="jumbotron" style="
     margin: auto;
     width: 25%;
 ">
-  <h1 class="display-4 smm">1987年</h1>
-  <p class="lead smm"><ruby>端<rp>（</rp><rt>duän</rt><rp>）</rp>
+  <h1 class="display-4 smm cn">1987年</h1>
+  <p class="lead smm cn"><ruby>端<rp>（</rp><rt>duän</rt><rp>）</rp>
 </ruby>典创造了我的世界</p>
   <video width="250" height="150" controls>
   <source src="https://cdn.glitch.com/b0acfa4c-7e37-4a82-aefa-c9e1a4747c87%2Ffull.mp4?v=1568198821463" type="video/mp4">
 宁的浏览器太垃圾辣
   </video><br>
-  这我做的 -- <span style="font-family: smm">Enterman</span>
+  <span class="cn">这我做的 -- </span><span style="font-family: smm">Enterman</span>
 </html>
