--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     margin: auto;
     width: 25%;
 ">
-  <h1 class="display-4 smm cn">1987年</h1>
-  <p class="lead smm cn"><ruby>端<rp>（</rp><rt>duän</rt><rp>）</rp>
+  <h1 class="display-4"><span class="smm">1987</span><span class="cn">年</span></h1>
+  <p class="lead smm cn"><ruby>端<rp>（</rp><rt class="smm">duän</rt><rp>）</rp>
 </ruby>典创造了我的世界</p>
   <video width="250" height="150" controls>
   <source src="https://cdn.glitch.com/b0acfa4c-7e37-4a82-aefa-c9e1a4747c87%2Ffull.mp4?v=1568198821463" type="video/mp4">
